refactor
- improve logging
- fix typos and grammatical errors
- remove unused imports
- fix TileMap#getVisbleTiles()
- use getFirst() instead of get(0)